# wags

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  fastagent.config.yaml  mkdocs.yml  pyproject.toml  run_bfcl_multi_turn.py
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  benchmarks.md  evals.md  index.md  motivation.md  onboarding.md  quickstart.md  requirements.txt
docs/javascripts/: extra.js
docs/middleware/: elicitation.md  groups.md  overview.md  roots.md  todo.md
docs/snippets/middleware/: base_middleware.py
docs/snippets/quickstart/: config.json  handlers.py  main.py
docs/stylesheets/: extra.css
experiments/: gepa_bfcl.py  gepa_minimal.py  gepa_overview.txt  optimize_gepa.py
experiments/gepa_analysis/: candidate_snapshots.py  prompt_diff.py  prompt_timeline.py  run_all.py
experiments/gepa_bfcl/: agent.py  data_utils.py  env_utils.py  logging_utils.py  metrics.py  run.py  scoring_utils.py
servers/: fastagent.config.yaml
servers/github/: .env.example  __init__.py  docker-compose.yml  fastagent.config.yaml  handlers.py  main.py  middleware.py  test_config.yaml  test_non_file_roots.py
src/elicitation_evals/: __init__.py  __main__.py  config.py  evaluator.py  parser.py  runner.py
src/elicitation_evals/bfcl/: __init__.py  data_loader.py  mcp_server.py
src/elicitation_evals/mcp_servers/: __init__.py  bfcl_api_server.py
src/elicitation_evals/templates/: config.yaml.j2  script.py.j2
src/evals/: README.md  __init__.py  logging.py  parser.py  runner.py  structured_logger.py
src/evals/benchmarks/: __init__.py
src/evals/benchmarks/bfcl/: __init__.py
src/evals/bfcl/: config.yaml  elicitation.py  evaluator.py  loader.py  mcp_server.py
src/evals/core/: __init__.py  runner.py  serializer.py
src/wags/: __init__.py  proxy.py
src/wags/cli/: __init__.py  main.py
src/wags/middleware/: __init__.py  base.py  elicitation.py  groups.py  roots.py  todo.py
src/wags/templates/: handlers.py.j2  main.py.j2  middleware.py.j2
src/wags/utils/: __init__.py  agent_instructions.txt  config.py  handlers_generator.py  middleware_generator.py  quickstart.py  server.py  server_template.py
submodules/bfcl/berkeley-function-call-leaderboard/bfcl_eval/data/: #BFCL_v4_multi_turn_base.json#
tests/: README.md  conftest.py  test_bfcl.py
tests/benchmarks/: __init__.py
tests/benchmarks/appworld/: .gitignore  README.md  __init__.py  api_predictor.py  appworld_helpers.py  conftest.py  fastagent.config.yaml  mcp_server.py  prompts.py  reporting.py  system_instruction.txt  test_appworld.py
tests/benchmarks/bfcl/: conftest.py  elicitation.py  evaluator.py  fastagent.config.yaml  instruction.txt  instruction_old.txt  loader.py  mcp_server.py  test_bfcl.py
tests/benchmarks/mcp_universe/: README.md  __init__.py  evaluator.py  evaluator_patch.py  fastagent.config.yaml  instruction.txt  loader.py  mcp_server_config.json  reporting.py  test_mcp_universe.py
tests/e2e/: conftest.py  fastagent.config.yaml  test_github_server.py
tests/e2e/groups/: __init__.py  conftest.py  demo.py  fastagent.config.yaml  server.py  test_groups_e2e.py
tests/e2e/todos/: conftest.py  fastagent.config.yaml  server.py  test_todo.py
tests/experiments/humanity_test/: analysis.py  conftest.py  fastagent.config.yaml  instruction.txt  test_classifier.py
tests/experiments/humanity_test/assets/: mcp_universe_repository_management.jsonl
tests/integration/: __init__.py  config_github_e2e.yaml  test_cli.py  test_cli_integration.py  test_elicitation_middleware.py  test_github_non_file_roots.py  test_groups_middleware.py  test_middleware_integration.py  test_roots_middleware.py
tests/integration/fixtures/: server.py
tests/unit/: test_message_serializer.py  test_proxy.py
tests/unit/cli/: test_commands.py
tests/unit/core/: test_serializer.py
tests/unit/middleware/: __init__.py  conftest.py  test_elicitation.py  test_groups.py  test_roots.py  test_todo.py
tests/unit/middleware/elicitation/: __init__.py  test_base.py  test_types.py
tests/unit/utils/: __init__.py  test_config.py  test_handlers_generator.py  test_middleware_generator.py  test_server.py  test_server_template.py
tests/utils/: __init__.py  fastagent_helpers.py  logger.py  test_fastagent_helpers.py
utils/: GEPA_desc.txt  appworld_new.txt  gepa_outputs_desc.txt  instruction_new.txt  json2md.py  tree.txt
utils/scripts/: compare_bfcl.py
